# my-first-genai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Home.py  README.md  pyproject.toml
.streamlit/: config.toml
pages/: 1_Schema_Studio.py  2_Extract.py  3_Results.py  5_Settings.py
schemas/: schemas.json
src/: config.py  logging.py
src/clients/: bedrock_client.py  textract_client.py
src/domain/: run_store.py  schema_store.py
src/domain/stores/: run_store.py  schema_store.py
src/domain/utils/: schema_types.py  schema_validation.py
src/integrations/: bedrock_client.py  ocr.py  textract_client.py
src/integrations/clients/: textract_client.py
src/integrations/utils/: textract_types.py
src/pipeline/: classification.py  extraction.py  ocr.py  preprocess.py  runner.py  schema_suggest.py
src/pipeline/tasks/: extraction.py  ocr.py  preprocess.py  vision_extraction.py  voting.py
src/ui/: components.py
utils/: utils.py
