[project]
name = "extractly"
version = "0.1.0"
description = "Extractly is a Streamlit app for defining document schemas, classifying incoming files, and extracting structured metadata with traceable runs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.0",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.7.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]

[tool.setuptools]
package-dir = {"" = "src"}   # tells setuptools that code lives in /src
